# Snow_DS_Training

./: .gitignore  README.md
AISQL/: AISQL Equity Research.ipynb
DOCUMENT_PROCESSING/: DOCUMENT_PROCESSING.ipynb
DOC_EXTRACT_AISQL/: DOC_EXTRACT_AISQL.ipynb  Fine_Tune.ipynb
DOC_EXTRACT_AISQL/data/: movie_reviews_dataset.csv
Distributed_ML/: MMT_RAY.ipynb
ENTITY_RESOLUTION/: BATCH_SEARCH_DEMO.ipynb  BATCH_SEARCH_DEMO_PrPr.ipynb  ENTITY_RES_BENCHMARK.ipynb
IMAGE_MATCHING_EXTRACTION/: Image matching and extraction notebook.ipynb
ML_OPS/: README.md
ML_OPS/HOL_ML_OPS/: MORTGAGE_MODEL_1.ipynb
ML_OPS/MLOPS_101_BATCH_INFERENCE/: MLOPS_101_BATCH_INFERENCE.ipynb
ML_OPS/MLOPS_101_ONLINE_INFERENCE/: MLOPS_101_ONLINE_INFERENCE.ipynb  streamlit_app.py
ML_OPS/MLOPS_201_PIPELINE_DEPLOYMENT/: MLOPS_201_PIPELINE_DEPLOYMENT.ipynb
Marimo_SPCS/: Dockerfile  compose.yml  main.py  pyproject.toml
Remote_setup/: README.md  pyproject.toml  setup.sql
Setup_Scripts/: setup.sql
custom_models/: README.md  custom_models_demo.ipynb
